# gameoflife

./: .gitignore  CMakeLists.txt  README.md  gol.c  gol.h
include/: gol-clientserver-matrix.h  gol-clientserver.h  gol.h
src/: gol-clientserver.c  gol-server-matrix.c  gol.c
